--- a/src/app/qrcode-scanner/qrcode-scanner.component.html
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.html
@@ -1,10 +1,9 @@
-<h1>Scan from WebCam:</h1>
+<h1>Code reader</h1>
 <div id="video-container">
     <video id="qr-video"></video>
 </div>
 <div>
     <label>
-        Highlight Style
         <select id="scan-region-highlight-style-select" disabled>
             <option value="default-style">Default style</option>
             <option value="example-style-1">Example custom style 1</option>
