--- a/src/app/qrcode-scanner/qrcode-scanner.component.css
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Prompt&display=swap");
+* {
+  font-family: "Prompt", sans-serif;
+}
 div {
   margin-bottom: 16px;
   display: flex;
