--- a/src/app/qrcode-scanner/qrcode-scanner.component.html
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.html
@@ -4,9 +4,7 @@
 </div>
 <div>
     <label>
-        <select id="scan-region-highlight-style-select" disabled>
-            <option value="default-style">Default style</option>
-            <option value="example-style-1">Example custom style 1</option>
+        <select id="scan-region-highlight-style-select">
             <option value="example-style-2">Example custom style 2</option>
         </select>
         <br>
