--- a/src/app/qrcode-scanner/qrcode-scanner.component.html
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.html
@@ -3,12 +3,11 @@
     <video id="qr-video"></video>
 </div>
 <div>
-    <label>
-
-        <br>
-        <b>Detected QR code: </b>
-        <span id="cam-qr-result">None</span>
-        <br>
-        <b>Last detected at: </b>
-        <span id="cam-qr-result-timestamp"></span>
-        <br>
+    <br>
+    <b>Detected QR code: </b>
+    <span id="cam-qr-result">None</span>
+    <br>
+    <b>Last detected at: </b>
+    <span id="cam-qr-result-timestamp"></span>
+    <br>
+</div>
