--- a/src/app/qrcode-scanner/qrcode-scanner.component.css
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.css
@@ -1,10 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Prompt&display=swap");
-* {
-  font-family: "Prompt", sans-serif;
-}
 div {
   margin-bottom: 16px;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
 }
@@ -20,23 +16,4 @@ video {
 }
 #video-container {
   line-height: 0;
-}
-
-#video-container.example-style-2 {
-  position: relative;
-  width: max-content;
-  height: max-content;
-  overflow: hidden;
-}
-#video-container.example-style-2 .scan-region-highlight {
-  border-radius: 30px;
-  outline: rgba(0, 0, 0, 0.25) solid 50vmax;
-}
-#video-container.example-style-2 .scan-region-highlight-svg {
-  display: none;
-}
-#video-container.example-style-2 .code-outline-highlight {
-  stroke: rgba(255, 255, 255, 0.5) !important;
-  stroke-width: 15 !important;
-  stroke-dasharray: none !important;
 }
