--- a/src/app/qrcode-scanner/qrcode-scanner.component.html
+++ b/src/app/qrcode-scanner/qrcode-scanner.component.html
@@ -1,13 +1,13 @@
 <h1>Code reader</h1>
-<div id="video-container">
-    <video id="qr-video"></video>
+<div #videoContainer>
+    <video #qrVideo></video>
 </div>
 <div>
     <br>
     <b>Detected QR code: </b>
-    <span id="cam-qr-result">None</span>
+    <span #camQrResult>None</span>
     <br>
     <b>Last detected at: </b>
-    <span id="cam-qr-result-timestamp"></span>
+    <span #camQrResultTimestamp></span>
     <br>
 </div>
